--- a/package.json
+++ b/package.json
@@ -1,31 +1,19 @@
 {
-  "name": "vutran",
+  "name": "mitchinson",
   "version": "1.0.0",
   "description": "My personal business card",
   "main": "index.js",
-  "author": "Vu <vu@vu-tran.com>",
+  "author": "Ben <mitchinson.dev@gmail.com>",
   "license": "MIT",
   "bin": "./index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/vutran/vutran"
+    "url": "https://github.com/bmitchinson/mitchinson"
   },
   "dependencies": {
     "boxen": "^2.1.0",
     "chalk": "^2.4.1",
-    "husky": "^1.3.0",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,json,css,md}": [
-      "prettier --write",
-      "git add"
-    ]
   }
 }
